--- a/configSetup.json
+++ b/configSetup.json
@@ -1,14 +1,28 @@
 {
-    "input": [
-        [4, 5],
-		["10:10:01", "11:10:02", 1, 2, 3, 4, "10:10:03", "11:10:04", 5, 6, 7, 8, "10:10:05", "11:10:06", 9, 10, 11, 12 , "10:10:07", "11:10:08", 13, 14, 15, 16, "10:10:09", "11:10:10", 17, 18, 19, 20, "10:10:11", "11:10:12", 21, 22, 23, 24, 2],
-        ["10:20:01", 1, 2, "10:20:01", 3, 4, "10:20:01", 5, 6, "10:20:01", 7, 8, "10:20:01", 9, 10, "10:20:01", 11, 12, 2, 23],
-        [11, 11, 1224, 1348, 1476, 1511, 2, 2, 3],
-        ["2023-06-17", "05:59:50", 5, "ESP8266_TEST", "", "BEELINK_N5095A", "11110000", "", "", 80]
-    ],
-    "s_mode": 87381,
+    "chart": [4, 5],
+    "pwm": [
+		["14:45:01", "14:47:02", 1, 1, 0, 100], 
+		["14:45:01", "14:47:01", 1, 1, 0, 100], 
+		["14:45:02", "14:47:02", 1, 1, 0, 100], 
+		["14:45:03", "14:47:03", 1, 1, 0, 100], 
+		["14:45:04", "14:47:04", 1, 1, 0, 100], 
+		["14:45:05", "14:47:05", 1, 1, 0, 100], 
+		[1]
+	],
+    "rel": [
+		["14:45:01", 1, 10], 
+		["14:45:02", 2, 10], 
+		["14:45:03", 3, 10], 
+		["14:45:04", 4, 10], 
+		["14:45:05", 5, 10], 
+		["14:45:06", 6, 10], 
+		[1, 63]
+	],
+
+    "opt": [11, 0, 1224, 1348, 1476, 1511, 1, 1, 3, 3, "#ffffff", "#ffffff"],
+    "wifi": ["2025-04-22", "14:44:55", 5, "ESP8266_TEST", "", "Keenetic-4111", "T83jycPo", "", "", 80],
+	"rgb_pwm":["#000000","#ff0000","#00ff00","#0000ff","#00ffff","#ffff00"],
     "defaultLang": 0,
-	"restart": 0,
-    "ver": ["6.6.8","4.95"],
-	"v5": 1
+    "restart": 1,
+    "ver": ["6.7.0", "5.0"]
 }
