--- a/configSetup.json
+++ b/configSetup.json
@@ -21,7 +21,7 @@
 
     "opt": [11, 0, 1224, 1348, 1476, 1511, 1, 1, 3, 3, "#ffffff", "#ffffff"],
     "wifi": ["2025-04-22", "14:44:55", 5, "ESP8266_TEST", "", "Keenetic-4111", "T83jycPo", "", "", 80],
-	"rgb_pwm":["#000000","#ff0000","#00ff00","#0000ff","#00ffff","#ffff00"],
+	"rgb_pwm":["#3370B7","#3370B7","#3370B7","#3370B7","#3370B7","#3370B7"],
     "defaultLang": 0,
     "restart": 1,
     "ver": ["6.7.0", "5.0"]
